# robot_arm_ros2

./: README.md
robot_arm_config/: .setup_assistant  README.md  package.xml
robot_arm_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  robot_arm.ros2_control.xacro  robot_arm.srdf  robot_arm.urdf.xacro  ros2_controllers.yaml
robot_arm_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
robot_arm_simulation/: CMakeLists.txt  README.md  README_rviz_moveit  package.xml
robot_arm_simulation/config/: arm_controllers.yaml
robot_arm_simulation/launch/: sim.launch.py
robot_arm_simulation/urdf/: robot_arm_urdf.xacro
robot_urdf/: CMakeLists.txt  controller.yaml  package.xml
robot_urdf/blender/: Robot_ae.aep
robot_urdf/config/: controller.yaml  joint_names_RobotURDF .yaml
robot_urdf/launch/: display.launch  gazebo.launch  spawn_robot.launch.py
robot_urdf/meshes/: Gripper.STL  Gripper_Actuator.STL  Lower_arm_link.STL  Rotary_Yoke.STL  Shoulder_Drive_unit.STL  Upper_arm_link.STL  Wrist_Modul.STL  base_link.STL
robot_urdf/urdf/: RobotURDF.csv  RobotURDF.urdf
