<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_arm_simulation</name>
  <version>0.0.0</version>
  <description>Robot Arm Simulation for ROS 2 Jazzy</description>
  <maintainer email="nakazaki@todo.todo">nakazaki</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- هذا السطر هو مفتاح حل مشكلة اختفاء الروبوت -->
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>